--- a/index.html
+++ b/index.html
@@ -1,56 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Saral Banking</title>
+    <title>CSS masterclass</title>
     <link href="css/style.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
   </head>
 
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-12">
-          <div class="anil__flex">
-            <div class="anil">
-              <h3>E-Billing</h3>
-              <p>E-billing is precious E-billing is</p>
-              <a href="">Learn More ></a>
-            </div>
-            <div class="anil">
-              <h3>Accounting</h3>
-              <p>Accounting helps in record keeping</p>
-              <a href="">Learn More ></a>
-            </div>
-            <div class="anil">
-              <h3>Sales</h3>
-              <p>Sales helps in selling test is done here</p>
-              <a href="">Learn More ></a>
-            </div>
-            <div class="anil">
-              <h3>Purchase</h3>
-              <p>This will help in purchasing</p>
-              <a href="">Learn More ></a>
-            </div>
-            <div class="anil">
-              <h3>Inventory</h3>
-              <p>This will help in inventory report</p>
-              <a href="">Learn More ></a>
-            </div>
-
-            <div class="anil">
-              <h3>Reporting</h3>
-              <p>This will help in reporting</p>
-              <a href="">Learn More ></a>
-            </div>
-          </div>
-        </div>
+      <div class="col-sm-12 col-sm-6 col-lg-12 test__flex">
+        <p class="background col-lg-8">Effective Time management skill</p>
+        <p class="background_g col-lg-4">
+          begineer guide to digital photography
+        </p>
+      </div>
+      <div class="col-lg-12 test__flex">
+        <p class="background col-lg-4">Effective Time management skill</p>
+        <p class="background_g col-lg-4">
+          begineer guide to digital photography
+        </p>
+        <p class="background col-lg-4">begineer guide to digital photography</p>
       </div>
     </div>
 
     <script src="js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
